# CoR-HPX

./: CMakeLists.txt  CORHPXConfig.cmake.in  CoR-HPXConfig.cmake.in  CoR-HPXConfigVersion.cmake.in  Jenkinsfile  PlaCoRConfig.cmake.in  PlaCoRConfigVersion.cmake.in  README.md
cap6/: CMakeLists.txt  client_rpc.cpp  friendly_numbers.cpp  inter_closure.cpp  mcpi.cpp  mcpi_for_loop.cpp  read_chain.hpp  read_files_dist_v1.cpp  read_files_dist_v2.cpp  read_files_dist_v3.cpp  read_files_par.cpp  server_rpc.cpp
cmake/Modules/: ExtractLibEventVersion.cpp  ExtractLibSSHVersion.cpp  ExtractSSRCSpreadVersion.cpp  ExtractSpreadVersion.cpp  FindCereal.cmake  FindLibEvent.cmake  FindLibEventThreads.cmake  FindLibSSH.cmake  FindSSRCSpread.cmake  FindSpread.cmake
cmake/Tools/: ClangFormatTool.cmake  ClangTidyTool.cmake
examples/: CMakeLists.txt  access_remote.cpp  access_remote_2.cpp  basicOperations.cpp  basicOperations_hpx.cpp  callableModule.cpp  callableModule_hpx.cpp  client.cpp  client_rpc.cpp  communicator.hpp  comunnicator_example.cpp  create_remote.cpp  data_example_1.cpp  data_example_2.cpp  data_with_user_object.cpp  data_with_user_object_funcional.cpp  heat.cpp  heat_distributed_parallel.cpp  heat_local_parallel.cpp  inter_closure.cpp  message_broadcast.cpp  module.cpp  module_2.cpp  module_hpx.cpp  multichannel_example.cpp  object.hpp  parallel.cpp  parallel_hpx.cpp  parallel_hpx2.cpp  parallel_hpx3.cpp  parallel_remote.cpp  queue.hpp  queue_interface.hpp  queue_methods.hpp  queue_program.cpp  queue_type_object.hpp  send_an_object.cpp  send_an_object_1.cpp  send_an_object_2.cpp  send_an_object_simple.cpp  (+7 more)
jekins/: build.sh
libcor/: CMakeLists.txt
libcor/include/cor/: CORHPXConfig.h  CORHPXConfig.h.in  CoR-HPXConfig.h  CoR-HPXConfig.h.in  PlaCoRConfig.h  PlaCoRConfig.h.in  cor.hpp  error.hpp  message.hpp  message.tpp  message_hpx.hpp  message_hpx.tpp
libcor/include/cor/elements/: communicator.hpp  container.hpp  container.tpp  dynamic_organizer.hpp  executor_hpx.hpp  executor_hpx.tpp  executor_pool.hpp  executor_pool.tpp  mailbox.hpp  mailbox_client.hpp  sbarrier.hpp  smulti_channel.hpp  smutex.hpp  srwmutex.hpp  static_organizer.hpp  suni_channel.hpp  switch_hpx.hpp  value.hpp  value.tpp
libcor/include/cor/resources/: agent.hpp  agent.tpp  agent_client.hpp  barrier.hpp  barrier_client.hpp  barrier_migrable.hpp  closure.hpp  closure_client.hpp  closure_migratable.hpp  data.hpp  data.tpp  data_client.hpp  domain.hpp  domain.tpp  domain_client.hpp  domain_client_migratable.hpp  domain_migratable.hpp  domain_migratable.tpp  duplex_channel.hpp  duplex_channel.tpp  duplex_channel_client.hpp  group.hpp  group_client.hpp  group_migratable.hpp  multi_channel.hpp  multi_channel.tpp  multi_channel_client.hpp  mutex.hpp  mutex_client.hpp  operon.hpp  operon.tpp  operon_client.hpp  proto_agent.hpp  proto_agent.tpp  proto_agent_client.hpp  proto_agent_migratable.hpp  proto_agent_migratable.tpp  resource.hpp  resource_migrable.hpp  resource_non_migrable.hpp  (+13 more)
libcor/include/cor/services/: access_manager.hpp  access_manager_client.hpp  controller.hpp  controller.tpp  idp_manager.hpp  idp_manager_client.hpp  mailer.hpp  mailer_hpx.hpp  mutexRW_service.hpp  mutexRW_service_client.hpp  mutex_service.hpp  mutex_service_client.hpp  page_manager.hpp  remote_session.hpp  resource_manager.hpp  resource_manager.tpp  resource_manager_global.hpp  resource_manager_global_client.hpp  session_manager.hpp
libcor/include/cor/system/: macros.hpp  pod.hpp  pod.tpp  pod_client.hpp  rpc_class.hpp  rpc_class.tpp  rpc_manager.hpp  rpc_manager.tpp  rpc_table.hpp  system.hpp  user_types.hpp
libcor/include/cor/utils/: utils.hpp
libcor/src/: CMakeLists.txt
libcor/src/cor/: CMakeLists.txt  cor.cpp  cor_hpx.cpp  error.cpp  message.cpp  message_hpx.cpp
libcor/src/cor/elements/: CMakeLists.txt  container.cpp  dynamic_organizer.cpp  executor_pool.cpp  mailbox.cpp  sbarrier.cpp  smutex.cpp  srwmutex.cpp  static_organizer.cpp
libcor/src/cor/resources/: CMakeLists.txt  barrier.cpp  closure.cpp  closure_client.cpp  data_client.cpp  data_hpx.cpp  dist_object.cpp  domain.cpp  domain_client.cpp  group.cpp  group_migratable.cpp  mutex.cpp  operon.cpp  resource.cpp  resource_migrable.cpp  resource_non_migrable.cpp  rwmutex.cpp  teste.cpp  teste_empty.cpp  teste_original.cpp
libcor/src/cor/services/: CMakeLists.txt  access_manager.cpp  controller.cpp  idp_manager.cpp  mailer.cpp  mutexRW_service.cpp  mutex_service.cpp  page_manager.cpp  remote_session.cpp  resource_manager.cpp  resource_manager_global.cpp  session_manager.cpp
libcor/src/cor/system/: CMakeLists.txt  pod.cpp  rpc_class.cpp  rpc_manager.cpp  system.cpp
libcor/src/cor/utils/: CMakeLists.txt  utils.cpp
tests/: CMakeLists.txt  client_rpc.cpp  dummy.cpp  server_rpc.cpp  test.cpp  test_alias.cpp  test_client.cpp  test_clos.cpp  test_pool.cpp  test_root.cpp  test_server.cpp  test_spawn.cpp  vecsum.cpp  vecsum_spawn.cpp
tools/: CMakeLists.txt
tools/corhpx/: CMakeLists.txt  corhpx.cpp  hpx_runtime.hpp
tools/corun/: CMakeLists.txt  corun.cpp  host_file_parser.cpp  host_file_parser.hpp
tools/corunhpx/: CMakeLists.txt  corunhpx.cpp
tools/corx/: CMakeLists.txt  corx.cpp
units/: CMakeLists.txt  pool.cpp  pool.hpp  pool2.hpp  pool_old.hpp  utils.hpp
